tests/baselines/reference/defaultValueInFunctionOverload1.errors.txt
==== tests/cases/compiler/defaultValueInFunctionOverload1.ts (1 errors) ====
    function foo(x: string = '');
                 ~~~~~~~~~~~~~~
!!! error TS2174: Default arguments are only allowed in implementation.
    function foo(x = '') { }